(10/05/2006)

*** Added str:quote() to put quotes around a string

(10/04/2006)

*** Added java:systemProperty which returns the value of a 
	Java system property.

(08/02/2006)

*** Fail if extra arguments are specified

*** Added some preliminary stat capability to the service

*** Also added a submit command to the service (to be used
    locally).
	
*** Added -nosec and -local arguments to the service.

*** RestartOnError can take a list of regexp as argument
    (this is somewhat reduntant, since the same goal can
	be achieved by the regexp itself, but it may provide
	for somewhat cleaner code)
	
*** Some cleanups.

(07/27/2006)

*** Added task:transferParams() which looks up in etc/bdp.conf (the
    same file as the one used by tgcp) to figure the GridFTP TCP
	buffer size
	
*** Added tcpBufferSize argument to task:transfer()

*** task:file:list() will list the files in the default directory if
    no argument is specified

(07/24/2006)

*** Reorganized and cleaned up code, in particular the bits dealing
    with element arguments

*** Added a throttling scheduler. It does not do scheduling, but it
    does throttling.
	
*** Added fault handlers to the scheduler
	
*** Added SSH throttling and restarting

*** Reorganized the service code a little

(07/12/2006)

*** Fixed task aborts

*** Added an experimental assignment operator: ':='. If there are multiple
    values on the right hand side, they need to be grouped under one element.

*** Allow "compact" blocks by not having to specify a sequential explicitly.
    Just the parentheses.

(07/11/2006)

*** Fixed a busy loop in the late binding scheduler

(07/08/2006)

*** Better stack traces. Only relevant things are now shown.

(07/07/2006)

*** Don't update/remove the channel list if a channel already existed

*** Corrected problems with stack unwinding on errors

*** Added support to store arbitrary strings in the log file

(06/26/2006)

*** Fixed a bug involving hosts without names
